*SVN*

* Support render :text => nil.  #6684 [tjennings, PotatoSalad, Cheah Chu Yeow]

* assert_response failures include the exception message.  #10688 [Seth Rasmussen]

* Fixed rendering of partials with layout when done from site layout #9209 [antramm]

* Fix atom_feed_helper to comply with the atom spec.  Closes #10672 [xaviershay]

  * The tags created do not contain a date (http://feedvalidator.org/docs/error/InvalidTAG.html)
  * IDs are not guaranteed unique
  * A default self link was not provided, contrary to the documentation
  * NOTE:  This changes tags for existing atom entries, but at least they validate now.

* Correct indentation in tests.  Closes #10671 [l.guidi]

* Fix that auto_link looks for ='s in url paths (Amazon urls have them).  Closes #10640 [bgreenlee]

* Ensure that test case setup is run even if overridden.  #10382 [Josh Peek]

* Fix HTML Sanitizer to allow trailing spaces in CSS style attributes.  Closes #10566 [wesley.moxam]

* Add :default option to time_zone_select.  #10590 [Matt Aimonetti]


*2.0.2* (December 16th, 2007)

* Added delete_via_redirect and put_via_redirect to integration testing #10497 [philodespotos]

* Allow headers['Accept'] to be set by hand when calling xml_http_request #10461 [BMorearty]

* Added OPTIONS to list of default accepted HTTP methods #10449 [holoway]

* Added option to pass proc to ActionController::Base.asset_host for maximum configurability #10521 [chuyeow]. Example:

    ActionController::Base.asset_host = Proc.new { |source|
      if source.starts_with?('/images')
        "http://images.example.com"
      else
        "http://assets.example.com"
      end
    }

* Fixed that ActionView#file_exists? would be incorrect if @first_render is set #10569 [dbussink]

* Added that Array#to_param calls to_param on all it's elements #10473 [brandon]

* Ensure asset cache directories are automatically created.  #10337 [Josh Peek, Cheah Chu Yeow]
