@@ -1,5 +1,7 @@
 *SVN*
 
+* UrlWriter respects relative_url_root.  #10748 [Cheah Chu Yeow]
+
 * Support render :text => nil.  #6684 [tjennings, PotatoSalad, Cheah Chu Yeow]
 
 * assert_response failures include the exception message.  #10688 [Seth Rasmussen]
